--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,14 @@ flutter:
     - 'images/diceroll.gif'
     - 'images/crabs.png'
     - 'images/crabs2.png'
+    - 'images/dice1.png'
+    - 'images/dice2.png'
+    - 'images/dice3.png'
+    - 'images/dice4.png'
+    - 'images/dice5.png'
+    - 'images/dice6.png'
+    - 'images/Red_button.png'
+    - 'images/crabs betting.jpg'
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
